Feat-configure shibboleth to work with the self reg app
1. put the apache file to get shibboleth attributes
2. added value eppa_key to vars.py
3. renamed old conditional variables with the new ones

--- a/roles/ood_user_reg_cloud/templates/vars.j2
+++ b/roles/ood_user_reg_cloud/templates/vars.j2
@@ -9,3 +9,4 @@ rabbitmq_agents_loc= "{{ rabbitmq_agents_loc }}"
 username_key = ["REMOTE_USER"]
 fullname_key = ["REMOTE_USER_DISPLAYNAME"]
 email_key = ["REMOTE_USER_MAIL"]
+eppa_key = ["REMOTE_USER_EPPA"]
