--- a/roles/ood_user_reg_cloud/templates/user-reg_conf_shib.j2
+++ b/roles/ood_user_reg_cloud/templates/user-reg_conf_shib.j2
@@ -12,7 +12,8 @@ ProxyPassReverse /static http://127.0.0.1:8000/static
         ShibRequestSetting requireSession 1
         Require valid-user
         RewriteCond %{IS_SUBREQ} ^false$
-        RewriteCond %{LA-U:REMOTE_USER} "^([a-z]+)@samltest.id$"
+        RewriteCond %{LA-U:REMOTE_USER} "([a-zA-Z0-9_.+-]+)@uab.edu$" [OR]
+        RewriteCond %{LA-U:REMOTE_USER} "urn:mace:incommon:uab.edu!https://uabgrid.uab.edu/shibboleth!(.+)$"         
         RewriteRule . - [E=RU:%1]
         RequestHeader set REMOTE_USER %{RU}e
         RewriteCond %{IS_SUBREQ} ^false$
@@ -27,6 +28,10 @@ ProxyPassReverse /static http://127.0.0.1:8000/static
         RewriteCond %{LA-U:mail} (.+)
         RewriteRule . - [E=mail:%1]
         RequestHeader set REMOTE_USER_MAIL %{mail}e
+        RewriteCond %{IS_SUBREQ} ^false$
+        RewriteCond %{LA-U:primary-affiliation} (.+)
+        RewriteRule . - [E=primary-affiliation:%1]
+        RequestHeader set REMOTE_USER_EPPA %{primary-affiliation}e
 </Location>
 
 <Location "/static/">
