Add missing import

--- a/roles/ood_user_reg_cloud/templates/user_auth_py.j2
+++ b/roles/ood_user_reg_cloud/templates/user_auth_py.j2
@@ -1,6 +1,7 @@
 #!{{ rabbitmq_agents_loc }}/venv/bin/python
 import re
 import sys
+import subprocess
 from urllib.parse import unquote
 
 sys.path.append("{{ rabbitmq_agents_loc }}")
