--- a/roles/ohpc_add_rabbitmq_agents/templates/config.j2
+++ b/roles/ohpc_add_rabbitmq_agents/templates/config.j2
@@ -7,7 +7,10 @@ Port = {{ rabbitmq_port }}
 
 Valid_state = {{ valid_user_state }}
 
-# time delay to let account creation finish 
+# Default function timeout
+Function_timeout = {{ function_timeout }}
+
+# time delay to let account creation finish
 # to avoid concurrency with downstream agents
 Delay = {{ delay }}
 
