Move StartLimitIntervalSec from Unit to Service
Also, rename the variable to StartLimitInterval

Source: https://dev.arvados.org/issues/12720
Service → StartLimitInterval (versions up to 219, incl. ubuntu:trusty)
Unit → StartLimitInterval (version 229, incl. ubuntu:xenial)
Unit → StartLimitIntervalSec (version 230+)

--- a/roles/ohpc_add_rabbitmq_agents/templates/agent.j2
+++ b/roles/ohpc_add_rabbitmq_agents/templates/agent.j2
@@ -1,9 +1,9 @@
 [Unit]
 After=rabbitmq-server.service
-StartLimitIntervalSec=0
 
 [Service]
 Type=simple
+StartLimitInterval=0
 Restart=always
 RestartSec=1
 User={{ rabbitmq_agents_service_user }}
