Change partition to match CoD environment's partition

--- a/roles/ood_ansys/templates/form.yml.j2
+++ b/roles/ood_ansys/templates/form.yml.j2
@@ -23,7 +23,7 @@ attributes:
     widget: select
     label: Partition
     options:
-      - [ "low", "low" ]
+      - [ "defq", "defq" ]
 
   version:
     widget: select
