Parameterize the valid_eppa value from group_vars/all

--- a/roles/ood_user_reg_cloud/templates/vars.j2
+++ b/roles/ood_user_reg_cloud/templates/vars.j2
@@ -8,7 +8,7 @@ default_referrer = "/pun/sys/dashboard"
 app_host = "{{ user_register_app_host }}"
 cors_allowed_origins= "{{ cors_allowed_origins }}"
 rabbitmq_agents_loc= "{{ rabbitmq_agents_loc }}"
-valid_eppa= ['faculty', 'staff', 'student', 'affiliate']
+valid_eppa= {{ valid_eppa }} 
 username_key = ["REMOTE_USER"]
 fullname_key = ["REMOTE_USER_DISPLAYNAME"]
 email_key = ["REMOTE_USER_MAIL"]
