Adding pre_certification state in the user_auth file

--- a/roles/ood_user_reg_cloud/templates/user_auth_py.j2
+++ b/roles/ood_user_reg_cloud/templates/user_auth_py.j2
@@ -33,7 +33,7 @@ else:
     # Check state from db
     result = rc_util.check_state(username)
 
-    if result == "ok":
+    if result == "ok" or result == "pre_certification":
         print(username)
     else:
         if migration and result == "no-account":
