--- a/roles/ohpc_add_rabbitmq_agents/templates/config.j2
+++ b/roles/ohpc_add_rabbitmq_agents/templates/config.j2
@@ -31,3 +31,5 @@ Info_url = "{{ info_url }}"
 Mail_list = "{{ mail_list }}"
 Mail_list_bcc = "{{ mail_list_bcc }}"
 
+#Bright CM version
+bright_cm_version ={{ cmsh_version }}
