--- a/roles/ohpc_add_rabbitmq_agents/templates/config.j2
+++ b/roles/ohpc_add_rabbitmq_agents/templates/config.j2
@@ -7,6 +7,10 @@ Port = {{ rabbitmq_port }}
 
 Valid_state = {{ valid_user_state }}
 
+# dict values in lock_groups correspond to the states defined above
+# eg: {"state":"group"}
+lock_groups = {{ lock_groups }}
+
 # Default function timeout
 Function_timeout = {{ function_timeout }}
 
