Add postrotate script to move log files

--- a/roles/lmod_db/templates/logrotate.j2
+++ b/roles/lmod_db/templates/logrotate.j2
@@ -5,4 +5,7 @@
    daily
    create 644 root root
    notifempty
+   postrotate
+     mv {{ lmod_log_filename }}-* {{ lmod_archive_loc }}
+   endscript
 }
