Use absolute path for command

--- a/roles/lmod_db/templates/logrotate.j2
+++ b/roles/lmod_db/templates/logrotate.j2
@@ -6,6 +6,6 @@
    create 644 root root
    notifempty
    postrotate
-     mv {{ lmod_log_filename }}-* {{ lmod_archive_loc }}
+     /usr/bin/mv {{ lmod_log_filename }}-* {{ lmod_archive_loc }}
    endscript
 }
