--- a/roles/ohpc_add_rabbitmq_agents/templates/config.j2
+++ b/roles/ohpc_add_rabbitmq_agents/templates/config.j2
@@ -37,6 +37,7 @@ db_path = "{{ rabbitmq_agents_db_path }}"
 Mail_server = "{{ mail_server }}"
 Admin_email = "{{ admin_email }}"
 Sender = "{{ sender }}"
+Sender_subscription = "{{ Sender_subscription }}"
 Sender_alias = "{{ sender_alias }}"
 Subject = "{{ subject }}"
 Info_url = "{{ info_url }}"
