Fixing the notification to user being quarantined  issue

--- a/roles/ohpc_add_rabbitmq_agents/templates/config.j2
+++ b/roles/ohpc_add_rabbitmq_agents/templates/config.j2
@@ -38,6 +38,7 @@ Mail_server = "{{ mail_server }}"
 Admin_email = "{{ admin_email }}"
 Sender = "{{ sender }}"
 Sender_subscription = "{{ Sender_subscription }}"
+Sender_notification = "{{ Sender_notification }}"
 Sender_alias = "{{ sender_alias }}"
 Subject = "{{ subject }}"
 Info_url = "{{ info_url }}"
