Pass env var to slurm job via VNC submit script
This will fix hpc desktop jobs not being archied by job archiver

--- a/roles/ood_vnc_form/files/vnc-submit.yml.erb
+++ b/roles/ood_vnc_form/files/vnc-submit.yml.erb
@@ -1,5 +1,7 @@
 ---
 script:
+  job_environment:
+    USER: "<%= ENV['USER'] %>"
   native:
     - "-N 1"
     - "-n <%= bc_num_slots.blank? ? 1 : bc_num_slots.to_i %>"
