Add docs_url in app_vars

--- a/roles/ood_user_reg_cloud/templates/app_vars.j2
+++ b/roles/ood_user_reg_cloud/templates/app_vars.j2
@@ -13,3 +13,4 @@ username_key = ["REMOTE_USER"]
 fullname_key = ["REMOTE_USER_DISPLAYNAME"]
 email_key = ["REMOTE_USER_MAIL"]
 eppa_key = ["REMOTE_USER_EPPA"]
+docs_url = {{ docs_url }}
