Add missing curly braces

--- a/roles/lmod_user/templates/rsyslog.j2
+++ b/roles/lmod_user/templates/rsyslog.j2
@@ -1,2 +1,2 @@
-if $programname contains 'ModuleUsageTracking' then @{{ lmod_db_host_machine }}:{{ lmod_db_host_port }
+if $programname contains 'ModuleUsageTracking' then @{{ lmod_db_host_machine }}:{{ lmod_db_host_port }}
 &~
