Update project name throughout code

--- a/roles/compute_build_vnfs/templates/compute_template.j2
+++ b/roles/compute_build_vnfs/templates/compute_template.j2
@@ -3,7 +3,7 @@
 # The general RHEL include has all of the necessary functions, but requires
 # some basic variables specific to each chroot type to be defined.
 # with additional procedure to add packages from variable EXTEND_COMPUTE
-. include-rhel-xcbc
+. include-rhel-bc
 
 
 
